# underfit

./: README.md  colab.ipynb  install.bat  install.sh  lora_train.py  pyproject.toml  run.bat  run.sh  run_gradio.py  underfit-colab.ipynb
dashboard/: index.html  server.py
dashboard/models/sa3-medium/: registry.json
dashboard/models/sa3-sm-music/: registry.json
dashboard/models/sa3-sm-sfx/: registry.json
dataset_processing/: pre_encode.py
underfit/: monitor.py
underfit/backends/: sa3.py
underfit/cli/: setup.py
underfit/training/: loop.py
underfit/utils/: gpu_check.py
