[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "underfit"
version = "0.1.0"
description = "LoRA finetuning for Stable Audio models"
readme = "README.md"

# Stable Audio 3 currently targets Python 3.10
requires-python = ">=3.10,<3.11"

license = { text = "MIT" }

authors = [
  { name = "CJ Carr", email = "cj@dadabots.com" },
]

keywords = [
  "audio",
  "diffusion",
  "lora",
  "stable-audio",
  "fine-tuning",
]

dependencies = [
  # Torch versions remain generic.
  # The CUDA 12.8 wheel selection is controlled by tool.uv.sources below.
  "torch==2.7.1",
  "torchaudio==2.7.1",

  "safetensors>=0.7.0",
  "tqdm>=4.67.3",
  "huggingface_hub>=1.7.1",
  "numpy>=2.2.6",
  "soundfile>=0.12",
  "Pillow>=10",
  "accelerate>=0.30",

  # Prebuilt Flash Attention wheel
  "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.4.10/flash_attn-2.8.2+cu128torch2.7-cp310-cp310-win_amd64.whl",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
]

torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
]

[project.urls]
Homepage = "https://github.com/dada-bots/underfit"
Repository = "https://github.com/dada-bots/underfit"
Issues = "https://github.com/dada-bots/underfit/issues"

[tool.uv]
package = true
required-version = ">=0.5"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["underfit"]

[project.scripts]
underfit-setup = "underfit.cli.setup:main"
underfit-update-registries = "underfit.cli.update_registries:main"